lesson27.3 with singleton